reference_modify/reference_modify.log
   Compiling reference_modify v0.1.0 (/home/haha/Rust/reference_modify)
error[E0596]: cannot borrow `*some_string` as mutable, as it is behind a `&` reference
 --> src/main.rs:8:5
  |
8 |     some_string.push_str(",world");
  |     ^^^^^^^^^^^ `some_string` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |
help: consider changing this to be a mutable reference
  |
7 | fn change(some_string: &mut String){
  |                         +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `reference_modify` (bin "reference_modify") due to 1 previous error
